EOS-618 scroll fixed when visible spinner

--- a/src/eos-dictionaries/card-views/card-edit.component.scss
+++ b/src/eos-dictionaries/card-views/card-edit.component.scss
@@ -92,7 +92,7 @@
         }
     }
     .spinner-wrapper {
-        padding: 10px;
+        padding: 20px;
         display: flex;
         justify-content: space-around;
         align-items: center;
